fix sidenav-toggle z-index

--- a/src/app/pages/admin/admin.component.css
+++ b/src/app/pages/admin/admin.component.css
@@ -30,6 +30,7 @@
         height: 100%;
         align-items: center;
         justify-content: center;
+        z-index: 1;
     }
     
     .sidenav-toggle mat-icon{
